# gtamaptk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-windows.yml  cmake-autobuild.yml
gtamaptk-assignlods/: CMakeLists.txt  README.md  main.cpp
gtamaptk-buildtxdfolders/: CMakeLists.txt  README.md  main.cpp
gtamaptk-buildtxdfolders/librwgta/: gtaplg.cpp
gtamaptk-colsplit/: CMakeLists.txt  README.md  main.cpp
gtamaptk-conv2dfx/: CMakeLists.txt  README.md  main.cpp
gtamaptk-conv2dfx/librwgta/: rwgta.h
gtamaptk-core/: CMakeLists.txt  gtamaptk-core.h
gtamaptk-core/IDE/: IdeFile.cpp  IdeFile.h
gtamaptk-core/IDE/section/: Ide2dfxEntry.cpp  Ide2dfxEntry.h  IdeAnimEntry.cpp  IdeAnimEntry.h  IdeObjsEntry.cpp  IdeObjsEntry.h  IdeTobjEntry.cpp  IdeTobjEntry.h  IdeTxdpEntry.cpp  IdeTxdpEntry.h
gtamaptk-core/IPL/: IplFile.cpp  IplFile.h
gtamaptk-core/IPL/section/: IplAuzoEntry.cpp  IplAuzoEntry.h  IplCarsEntry.cpp  IplCarsEntry.h  IplCullEntry.cpp  IplCullEntry.h  IplEnexEntry.cpp  IplEnexEntry.h  IplGrgeEntry.cpp  IplGrgeEntry.h  IplInstEntry.cpp  IplInstEntry.h  IplJumpEntry.cpp  IplJumpEntry.h  IplOcclEntry.cpp  IplOcclEntry.h  IplPickEntry.cpp  IplPickEntry.h  IplTcycEntry.cpp  IplTcycEntry.h  IplZoneEntry.cpp  IplZoneEntry.h
gtamaptk-core/cullzone/: CullZoneFile.cpp  CullZoneFile.h
gtamaptk-core/main/: GameMap.cpp  GameMap.h  MapFileSection.h  Shared.cpp  Shared.hpp
gtamaptk-core/math/: Box.h  Misc.h  Quaternion.h  RGBA.h  Sphere.h  Vector2d.h  Vector3d.h
gtamaptk-cullzone/: CMakeLists.txt  README.md  main.cpp
gtamaptk-dff2dfx/: CMakeLists.txt  main.cpp
gtamaptk-dump2dfx/: CMakeLists.txt  README.md  main.cpp
gtamaptk-entityinst/: CMakeLists.txt  README.md  main.cpp
gtamaptk-entityinst/inst/: EntityInstFile.cpp  EntityInstFile.h  EntityInstance.cpp  EntityInstance.h
gtamaptk-entityinst/inst/classdata/: BaseEntityClassData1.cpp  BaseEntityClassData1.h  BaseEntityClassData2.cpp  BaseEntityClassData2.h  CameraEntityClassData.cpp  CameraEntityClassData.h  DoorEntityClassData1.cpp  DoorEntityClassData1.h  DoorEntityClassData2.cpp  DoorEntityClassData2.h  HunterEntityClassData1.cpp  HunterEntityClassData1.h  HunterEntityClassData2.cpp  HunterEntityClassData2.h  LightEntityClassData1.cpp  LightEntityClassData1.h  LightEntityClassData2.cpp  LightEntityClassData2.h  PlayerEntityClassData.cpp  PlayerEntityClassData.h  TriggerEntityClassData.cpp  TriggerEntityClassData.h
gtamaptk-idmover/: CMakeLists.txt  README.md  main.cpp
gtamaptk-iplcomp/: CMakeLists.txt  README.md  main.cpp
gtamaptk-mapmover/: CMakeLists.txt  README.md  main.cpp
gtamaptk-merge2dfx/: CMakeLists.txt  README.md  main.cpp
gtamaptk-validatelods/: CMakeLists.txt  README.md  main.cpp
